--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
                 <div class="grp2">
                     <div class="phone-cards">
                         <img src="images/group-header-transformed.png" alt="">
+                        <h1><text-decoration>CARBON BANK</text-decoration></h1>
                     </div>
 
                 </div>
